# axum-htmx-sample

./: .gitignore  Cargo.toml  README.md
src/: main.rs
