[package]
name = "axum-htmx-sample"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.95" }
axum = { version = "0.7.9", features = ["multipart", "macros", "form"] }
maud = { version = "0.26.0", features = ["axum"] }
rand = { version = "0.8.5" }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
url = { version = "2.5.4" }
